[2017-7] Update solution